--- a/hugo.toml
+++ b/hugo.toml
@@ -1,97 +1,205 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-theme = "binario"
+theme = "color-your-world"
 title = 'My New Hugo Site'
 
 
-#baseurl = "/"
-#title = "Binario"
-#languageCode = "en-us"
-paginate = "10" # Number of elements per page in pagination
-#theme = "binario"
-disqusShortname = "" # DEPRECATED! Use .Services.Disqus.Shortname
-googleAnalytics = "" # DEPRECATED! Use .Services.googleAnalytics.ID
+# the following is from https://themes.gohugo.io/themes/hugo-theme-color-your-world/
+[params.style]
 
-[services.disqus]
-  shortname = "" # Enable Disqus by entering your Disqus shortname
-[services.googleAnalytics]
-  ID = "" # Enable Google Analytics by entering your tracking ID
+  # Dark mode as default
+  # User preferences (site/system settings) will still have priority over it
+  # The default is false
+  isDark = true
 
-[Author] # Used in authorbox
-  name = "John Doe"
-  bio = "John Doe's true identity is unknown. Maybe he is a successful blogger or writer."
-  avatar = "img/avatar.png"
+  # Accent colors for dark and light mode respectively
+  darkAccent   = "#1dbc91" # Default is "#1dbc91"
+  lightAccent  = "#1f676b" # Default is "#1f676b"
 
-[Params]
-  description = "Responsive card-based & code-light Hugo theme" # Site Description. Used in meta description
-  copyright = "color-your-world" # Copyright holder, otherwise will use .Site.Title
-  opengraph = true # Enable OpenGraph if true
-  schema = true # Enable Schema
-  twitter_cards = true # Enable Twitter Cards if true
-  columns = 2 # Set the number of cards columns. Possible values: 1, 2, 3
-#  mainSections = ["post"] # Set main page sections
-  dateFormat = "January 02, 2006" # Change the format of dates
-  colorTheme = "" # dark-green, dark-blue, dark-red, dark-violet
-  customCSS = ["css/custom.css"] # Include custom CSS files
-  customJS = ["js/custom.js"] # Include custom JS files
-  mainMenuAlignment = "right" # Align main menu (desktop version) to the right side
-  authorbox = true # Show authorbox at bottom of single pages if true
-  comments = true # Enable comments for all site pages
-  related = true # Enable Related content for single pages
-  relatedMax = 5 # Set the maximum number of elements that can be displayed in related block. Optional
-  mathjax = true # Enable MathJax for all site pages
-  mathjaxPath = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js" # Specify MathJax path. Optional
-  mathjaxConfig = "TeX-AMS-MML_HTMLorMML" # Specify MathJax config. Optional
-  hideNoPostsWarning = false # Don't show no posts empty state warning in main page, if true
+  # More colors, pick as many as you want (not really sure if there's a limit)
+  # Apparently these may not show up on every modern browser (ie.: Firefox)
+  # There's no default value. Used here just as example
+  presets = [ "#1f676b", "#f3a530", "#902b37", "#1dbc91", "#754e85", "#7fc121", "#a8314a", "#ff7433", "#3e6728", "#c063bd" ]
 
-[Params.Entry]
-  meta = ["date", "categories", "tags"] # Enable meta fields in given order
-  toc = true # Enable Table of Contents
-  tocOpen = true # Open Table of Contents block. Optional
+  
+    # Disable the use of system settings (prefers-color-scheme)
+    # Can be used as a workaround for Chrome on Linux
+    # (Issue 998903: Dark Gtk theme does not affect prefers-color-scheme media query)
+    # The default is false
+    ignoreSystemSettings = false
+  
+    # Use an icon or text for footnote return links
+    # The default is false
+    hasIconAsFootnoteReturnLink = true
+    
+    # For the social shortcode
+    # Use flexbox (with flex-grow) or grid (equal width)
+    # The default is false
+    socialIsFlex = false
+    
+    # Keep anchor links hidden until it's focused/hovered
+    # They will always be visible in mobile devices, regardless the option
+    # The default is false
+    hideAnchors = true
 
-[Params.Featured]
-  previewOnly = false # Show only preview featured image
+    # CSS animation transition when changing colors
+    # The default is ".5s ease"
+    changeTransition = ".3s ease"
 
-[Params.Breadcrumb]
-  enable = true # Enable breadcrumb block globally
-  homeText = "Binario" # Home node text
+[markup.highlight]
+  # Enable syntax highlighting and code style responsiveness to light/dark mode
+  noClasses = false
 
-[Params.Social]
-  email = "example@example.com"
-  github = "username"
-  stackoverflow = "numberid"
-  mastodon = "https://chaos.social/@geekfem"
 
-#[Params.Share] # Entry Share block
-#  facebook = true
-#  twitter = true
-#  reddit = true
-#  telegram = true
-#  linkedin = true
-#  vk = true
-#  pocket = true
-#  pinterest = true
 
-# Web App Manifest settings
-# https://www.w3.org/TR/appmanifest/
-# https://developers.google.com/web/fundamentals/web-app-manifest/
-[Params.Manifest]
-  name = "Binario"
-  shortName = "Binario"
-  display = "browser"
-  startUrl = "/"
-  backgroundColor = "#2a2a2a"
-  themeColor = "#1b1b1b"
-  description = "Responsive card-based & code-light Hugo theme"
-  orientation = "portrait"
-  scope = "/"
+[params.social.decentralized]    
+  [params.social.decentralized.mastodon]
+    1 = [ "https://chaos.social/haecksen", "Mastodon" ]
 
-[outputFormats]
-  [outputFormats.MANIFEST]
-    mediaType = "application/json"
-    baseName = "manifest"
-    isPlainText = true
-    notAlternative = true
 
-[outputs]
-  home = ["HTML", "RSS", "MANIFEST"]
+# Contact form shortcode
+[params.contact]  # TODO
+
+  # formspree.io Form ID
+  formspreeFormId = "example"
+  
+  # Autocomplete [on/off] and min character length for message
+  autoComplete      = false # Default is false
+  messageMinLength  = 140   # Default is 140
+  
+  # Subject
+  # You can set a single value below (and it will cease to be a dropdown),
+  # BUT KEEP IT AS AN ARRAY
+  # It can also be disabled entirely (and it will turn into a text field)
+  subject = [ 'Just saying "hi"', "I know what you did last winter", "... Is that a sloth?", "お前はもう死んでいる。" ]
+
+  # Text placeholders. As usual, comment the lines if you don't want use them
+  # The "subject" below will only be used if the "subject" above doesn't exist (ie.: commented/deleted)
+  [params.contact.placeholder]
+    name    = "Jane Doe"
+    email   = "janedoe@example.com"
+    subject = 'Just saying "hi"'
+    message = "Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus."
+
+
+[params.notFound]
+  title         = "Page not found"
+  description   = "This page was not found."
+  paragraph     = "Nothing to see here, buddy."
+
+
+# Used only in the RSS file
+copyright = "Copyright © 2008–2021, Steve Francia and the Hugo Authors; All rights reserved."
+
+[params] # TODO
+  
+  # Site description
+  description = "John Doe's personal website"
+  
+  # Author
+  author      = "John Doe"
+  authorDesc  = "Some indescribable horror."
+  
+  # Footer text
+  # Each value will become a paragraph
+  # Keep it as an array
+  footerText = [ "Generated with [Hugo](https://gohugo.io) using the [Color Your World](https://gitlab.com/rmaguiar/hugo-theme-color-your-world) theme." ]
+  
+  # Site cover, for Open Graph, Twitter Cards and Schema.org
+  # It will be used if the current page doesn't have an image cover
+  # File will be picked from the "assets" directory
+  # Comment the lines if you don't want to use it
+  cover     = "img/cover.jpg"
+  coverAlt  = "A placeholder that doesn't deserve to be described."
+  
+  # Shows a message in the footer about JavaScript being disabled
+  # The default is false
+  hasNoscriptNotice = true
+  
+  # Default path for images in posts
+  # ie.: "content/some-post/img"
+  # Can also be set PER PAGE
+  # It can be used to reduce repetition
+  # There's no default value
+  imgPath = "img"
+  
+  # Default classes for markup image 
+  # Modifies the default behavior of images placed via markdown
+  # Can also be set PER PAGE via front matter
+  # Available classes are: border and borderless
+  # There's no default value
+  markupImgClass = "borderless"
+  
+  # This will append a separator (of your choice) along the site title to your <title>
+  # ie.: | ❚ - – — • ⚫
+  # You can disabled it PER PAGE by using "disableTitleSeparator" at front
+  # matter or disable it entirely by commenting the line below
+  titleSeparator = "|"
+  
+  [params.search]
+  
+    # Enable search form (at the post list)
+    # The default value is false
+    enable = true
+  
+    # Limit search results
+    # The default value is 30
+    maxResults = 15
+    
+    # Limit seach field input and pattern matching
+    minLength = 2   # Default is 3
+    maxLength = 42  # Default is 32
+    
+    # Optional placeholder for search field
+    placeholder = "ie.: lorem ipsum"
+    
+    # Stop word filter list
+    # Can also be set PER PAGE via front matter
+    # There's no default value
+    stopWords = [ "a", "an", "and", "in", "the", "to", "was", "were", "with" ]
+
+
+[languages]
+
+  [languages.en]
+  
+    languageName = "English"
+
+    [languages.en.menu]
+
+      [[languages.en.menu.main]]
+        name = "About"
+        weight = 1
+        url = "/"
+
+      [[languages.en.menu.main]]
+        name = "Posts"
+        weight = 2
+        url = "posts/"
+      
+      [[languages.en.menu.main]]
+        name = "Contact"
+        weight = 3
+        url = "contact/"
+
+  [languages.de]
+    
+    languageName = "Deutsch"
+
+    [languages.de.menu]
+      
+      [[languages.de.menu.main]]
+        name = "Aboutuaedni"  # TODO: Bessere Wörter
+        weight = 1
+        url = "/"
+
+      [[languages.de.menu.main]]
+        name = "Posts"
+        weight = 2
+        url = "posts/"
+      
+      [[languages.de.menu.main]]
+        name = "Contact"
+        weight = 3
+        url = "contact/"
+
