--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
+baseURL = 'https://geekfem.net/'
+languageCode = 'de-de'
 theme = "color-your-world"
-title = 'My New Hugo Site'
+title = 'Geekfem'
 
 
 # the following is from https://themes.gohugo.io/themes/hugo-theme-color-your-world/
@@ -94,10 +94,10 @@ copyright = "Copyright © 2008–2021, Steve Francia and the Hugo Authors; All r
 [params] # TODO
   
   # Site description
-  description = "John Doe's personal website"
+  description = "This is the site description in line 97"
   
   # Author
-  author      = "John Doe"
+  author      = "Authorrrr line 100"
   authorDesc  = "Some indescribable horror."
   
   # Footer text
@@ -114,7 +114,7 @@ copyright = "Copyright © 2008–2021, Steve Francia and the Hugo Authors; All r
   
   # Shows a message in the footer about JavaScript being disabled
   # The default is false
-  hasNoscriptNotice = true
+  hasNoscriptNotice = false
   
   # Default path for images in posts
   # ie.: "content/some-post/img"
@@ -172,10 +172,10 @@ copyright = "Copyright © 2008–2021, Steve Francia and the Hugo Authors; All r
         weight = 1
         url = "/"
 
-      [[languages.de.menu.main]]
-        name = "Posts"
-        weight = 2
-        url = "posts/"
+#      [[languages.de.menu.main]]
+#        name = "Posts"
+#        weight = 2
+#        url = "posts/"
       
       [[languages.de.menu.main]]
         name = "Über Geekfem"
