--- a/hugo.toml
+++ b/hugo.toml
@@ -29,16 +29,16 @@ defaultContentLanguageInSubdir = true
     # (Issue 998903: Dark Gtk theme does not affect prefers-color-scheme media query)
     # The default is false
     ignoreSystemSettings = false
-  
+
     # Use an icon or text for footnote return links
     # The default is false
-    hasIconAsFootnoteReturnLink = true
-    
+    hasIconAsFootnoteReturnLink = false
+
     # For the social shortcode
     # Use flexbox (with flex-grow) or grid (equal width)
     # The default is false
     socialIsFlex = false
-    
+
     # Keep anchor links hidden until it's focused/hovered
     # They will always be visible in mobile devices, regardless the option
     # The default is false
@@ -52,36 +52,29 @@ defaultContentLanguageInSubdir = true
   # Enable syntax highlighting and code style responsiveness to light/dark mode
   noClasses = false
 
-
-
-[params.social.decentralized]    
+[params.social.decentralized]
   [params.social.decentralized.mastodon]
     1 = [ "https://chaos.social/haecksen", "Mastodon" ]
 
-
-# Contact form shortcode
-[params.contact]  # TODO
-
-  # formspree.io Form ID
-  formspreeFormId = "example"
-  
-  # Autocomplete [on/off] and min character length for message
-  autoComplete      = false # Default is false
-  messageMinLength  = 140   # Default is 140
-  
-  # Subject
-  # You can set a single value below (and it will cease to be a dropdown),
-  # BUT KEEP IT AS AN ARRAY
-  # It can also be disabled entirely (and it will turn into a text field)
-  subject = [ 'Just saying "hi"', "I know what you did last winter", "... Is that a sloth?", "お前はもう死んでいる。" ]
-
-  # Text placeholders. As usual, comment the lines if you don't want use them
-  # The "subject" below will only be used if the "subject" above doesn't exist (ie.: commented/deleted)
-  [params.contact.placeholder]
-    name    = "Jane Doe"
-    email   = "janedoe@example.com"
-    subject = 'Just saying "hi"'
-    message = "Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus."
+## Contact form shortcode  # This is not used on the geekfem website.
+#[params.contact]  
+#  # formspree.io Form ID
+#  formspreeFormId = "example"
+#  # Autocomplete [on/off] and min character length for message
+#  autoComplete      = false # Default is false
+#  messageMinLength  = 140   # Default is 140
+#  # Subject
+#  # You can set a single value below (and it will cease to be a dropdown),
+#  # BUT KEEP IT AS AN ARRAY
+#  # It can also be disabled entirely (and it will turn into a text field)
+#  subject = [ 'Just saying "hi"', "I know what you did last winter", "... Is that a sloth?", "お前はもう死んでいる。" ]
+#  # Text placeholders. As usual, comment the lines if you don't want use them
+#  # The "subject" below will only be used if the "subject" above doesn't exist (ie.: commented/deleted)
+#  [params.contact.placeholder]
+#    name    = "Jane Doe"
+#    email   = "janedoe@example.com"
+#    subject = 'Just saying "hi"'
+#    message = "Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus."
 
 
 [params.notFound]
@@ -91,16 +84,16 @@ defaultContentLanguageInSubdir = true
 
 
 # Used only in the RSS file
-copyright = "Copyright © 2008–2021, Steve Francia and the Hugo Authors; All rights reserved."
+copyright = "Copyright Hugo © 2008–2021, Steve Francia and the Hugo Authors; All rights reserved. Copyright Geekfem contens CC-BY-SA"
 
-[params] # TODO
+[params] #
   
   # Site description
-  description = "This is the site description in line 97"
+  description = "Geekfem – FLINTA Hackers in Hamburg"
   
   # Author
-  author      = "Authorrrr line 100"
-  authorDesc  = "Some indescribable horror."
+  author      = "Geekfem"
+  authorDesc  = "FLINTA Hackers in Hamburg"
   
   # Footer text
   # Each value will become a paragraph
