--- a/hugo.toml
+++ b/hugo.toml
@@ -15,8 +15,8 @@ defaultContentLanguageInSubdir = true
   isDark = true
 
   # Accent colors for dark and light mode respectively
-  darkAccent   = "#1dbc91" # Default is "#1dbc91"
-  lightAccent  = "#1f676b" # Default is "#1f676b"
+  darkAccent   = "#57e389" # Default is "#1dbc91"
+  lightAccent  = "#813d9c" # Default is "#1f676b"
 
   # More colors, pick as many as you want (not really sure if there's a limit)
   # Apparently these may not show up on every modern browser (ie.: Firefox)
